# multi-tenant-llm-router

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: load_log.jsonl  requests.jsonl
results/_style/: repo.mplstyle
src/router/: types.py
src/router/adapters/: cache.py
src/router/auth/: keys.py
src/router/bench/: load.py
src/router/cli/: main.py
src/router/routing/: backend.py  router_app.py
src/router/viz/: charts.py
tests/: test_app.py  test_auth.py  test_cache.py
tests/fixtures/: tenants.yaml
