[project]
name = "router"
version = "0.9.0"
description = "Multi-LoRA serving router with adapter hot-swap, per-tenant auth, and cost tracking on top of vLLM."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
keywords = ["vllm", "lora", "multi-tenant", "inference-serving", "routing"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "typer>=0.12",
    "loguru>=0.7",
    "tabulate>=0.9",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8","pytest-cov>=5","pytest-asyncio>=0.23","ruff>=0.5","mypy>=1.10","types-PyYAML","types-tqdm"]

[project.scripts]
router = "router.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/router"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","B","UP","SIM","RUF"]
ignore = ["E501","B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true
exclude = ["build/","dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = ["slow: tests that hit a real vllm server"]
